# laba2class

./: CMakeLists.txt  README  library.cpp  library.h  main.cpp  menu.cpp  menu.h
